# lcat-rs

./: .dprint.json  .gitattributes  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  release-please-config.json  release-plz.toml  rustfmt.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: audit.yml  deploy.yml  flake-lock.yml  format-workflow.yml  workflow.yml  zizmor.yml
lcat/: CHANGELOG.md  Cargo.toml  README.md
lcat/src/: lib.rs  main.rs  ok.rs  rainbow.rs  rainbow_cmd.rs
lcowsay/: CHANGELOG.md  Cargo.toml  README.md
lcowsay/src/: bubble.rs  cow.rs  lib.rs  main.rs  shapes.rs
lolcow-fortune/: CHANGELOG.md  Cargo.toml  README.md
lolcow-fortune/src/: lib.rs  main.rs
src/: bubble.rs  cow.rs  lib.rs  main.rs  ok.rs  rainbow.rs  rainbow_cmd.rs  shapes.rs
