[package]
name = "lolcow-fortune"
version = "0.1.3"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
edition = "2021"
description = "`fortunes` combined with `lolcat` and `cowsay`!"
readme = "README.md"
repository = "https://github.com/davidkna/lolcow-fortune-rs"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lolcow-fortune"
path = "src/main.rs"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = [
    "attohttpc",
    "clap",
    "directories",
    "flate2",
    "lcat",
    "lcowsay",
    "tar",
]

[dependencies]
# Lib
fastrand = "1.5.0"
memchr = "2.4.1"
deku = "0.12.5"
thiserror = "1.0.30"
itertools = "0.10.3"

# Binary
clap = { version = "3.0.0-rc.4", features = ["derive", "unicode"], optional = true }
directories = { version = "4.0.1", optional = true }

# Download
flate2 = { version = "1.0.22", optional = true, default-features = false, features = ["rust_backend"] }
attohttpc = { version = "0.18.0", optional = true, default-features = false, features = ["tls"] }
tar = { version = "0.4.37", optional = true }

[dependencies.lcowsay]
version = "0.5.2"
optional = true

[dependencies.lcat]
version = "0.7.4"
optional = true
