[package]
name = "lcat"
version = "0.7.4"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
edition = "2021"
description = "Another lolcat in rust! Full unicode support, escapes for ANSI escape sequences, hue shift in Cubehelix."
readme = "README.md"
repository = "https://github.com/davidkna/lcat-rs"
documentation = "https://docs.rs/lcat/"
license = "MIT OR Apache-2.0"

[features]
default = ["clap"]

[dependencies]
bstr = "0.2.17"
clap = { version = "3.0.0-rc.5", features = ["derive", "unicode"], optional = true }
colorgrad = "0.5.0"
fastrand = "1.5.0"
unicode-segmentation = "1.8.0"
unicode-width = "0.1.9"
