[package]
name = "lcat"
version = "0.8.0"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
documentation = "https://docs.rs/lcat/"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/davidkna/lcat-rs"
description = "Another lolcat in rust! Full unicode support, escapes for ANSI escape sequences, hue shift in Cubehelix."

[features]
default = ["clap"]

[dependencies]
anstyle = "1.0.13"
anstyle-lossy = "1.1.4"
bstr = "1.12.1"
clap = { version = "4.5.57", features = ["derive", "wrap_help"], optional = true }
colorgrad = { version = "0.8.0", default-features = false, features = ["preset"] }
fastrand = "2.3.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
