[package]
name = "lcat"
version = "0.8.0"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
documentation = "https://docs.rs/lcat/"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/davidkna/lcat-rs"
description = "Another lolcat in rust! Full unicode support, escapes for ANSI escape sequences, hue shift in Cubehelix."

[features]
default = ["clap"]

[dependencies]
anstyle = "1.0.14"
anstyle-lossy = "1.1.5"
bstr = "1.12.1"
clap = { version = "4.6.0", features = ["derive", "wrap_help"], optional = true }
colorgrad = { version = "0.8.0", default-features = false, features = ["preset"] }
fastrand = "2.4.1"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
