[package]
name = "lcowsay"
version = "0.5.6"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
documentation = "https://docs.rs/lcowsay/"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/davidkna/lcowsay-rs"
description = "Cowsay, but combined with lolcat."

[lib]
path = "src/lib.rs"

[[bin]]
name = "lcowsay"
path = "src/main.rs"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = ["lcat", "clap"]

[dependencies]
clap = { version = "3.1.18", features = ["derive", "unicode"], optional = true }
hyphenation = "0.8.4"
textwrap = { version = "0.15.0", features = ["hyphenation"] }
unicode-width = "0.1.9"

[dependencies.lcat]
version = "0.7.10"
path = "../lcat"
optional = true
