[package]
name = "lolcow-fortune"
version = "0.1.9"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/davidkna/lolcow-fortune-rs"
description = "`fortunes` combined with `lolcat` and `cowsay`!"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lolcow-fortune"
path = "src/main.rs"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = [
  "attohttpc",
  "clap",
  "directories",
  "flate2",
  "lcat",
  "lcowsay",
  "tar",
]

[dependencies]
# Lib
deku = "0.16.0"
fastrand = "2.0.0"
itertools = "0.11.0"
memchr = "2.5.0"
thiserror = "1.0.47"

# Binary
clap = { version = "4.3.21", features = ["derive", "wrap_help"], optional = true }
directories = { version = "5.0.1", optional = true }

# Download
attohttpc = { version = "0.26.0", optional = true, default-features = false, features = ["tls-rustls"] }
flate2 = { version = "1.0.27", optional = true, default-features = false, features = ["rust_backend"] }
tar = { version = "0.4.40", optional = true }

[dependencies.lcowsay]
version = "0.5.8"
path = "../lcowsay"
optional = true

[dependencies.lcat]
version = "0.7.12"
path = "../lcat"
optional = true
