[package]
name = "lolcow-fortune"
version = "0.1.10"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/davidkna/lolcow-fortune-rs"
description = "`fortunes` combined with `lolcat` and `cowsay`!"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lolcow-fortune"
path = "src/main.rs"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = [
  "clap",
  "directories",
  "flate2",
  "lcat",
  "lcowsay",
  "tar",
  "ureq",
]

[dependencies]
# Lib
deku = "0.16.0"
fastrand = "2.0.1"
itertools = "0.12.1"
memchr = "2.7.1"
thiserror = "1.0.57"

# Binary
clap = { version = "4.5.1", features = ["derive", "wrap_help"], optional = true }
directories = { version = "5.0.1", optional = true }

# Download
flate2 = { version = "1.0.28", optional = true, default-features = false, features = ["rust_backend"] }
tar = { version = "0.4.40", optional = true }
ureq = { version = "2.9.6", optional = true, default-features = false, features = ["tls", "native-certs"] }

[dependencies.lcowsay]
version = "0.5.9"
path = "../lcowsay"
optional = true

[dependencies.lcat]
version = "0.7.13"
path = "../lcat"
optional = true
