[package]
name = "lolcow-fortune"
version = "0.1.11"
authors = ["David Knaack <davidkna@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/davidkna/lolcow-fortune-rs"
description = "`fortunes` combined with `lolcat` and `cowsay`!"

[lib]
path = "src/lib.rs"

[[bin]]
name = "lolcow-fortune"
path = "src/main.rs"
required-features = ["build-binary"]

[features]
default = ["build-binary"]
build-binary = [
  "clap",
  "directories",
  "flate2",
  "lcat",
  "lcowsay",
  "tar",
  "ureq",
]

[dependencies]
# Lib
deku = "0.18.1"
fastrand = "2.3.0"
itertools = "0.14.0"
memchr = "2.7.4"
thiserror = "2.0.9"

# Binary
clap = { version = "4.5.24", features = ["derive", "wrap_help"], optional = true }
directories = { version = "5.0.1", optional = true }

# Download
flate2 = { version = "1.0.35", optional = true, default-features = false, features = ["rust_backend"] }
tar = { version = "0.4.43", optional = true }
ureq = { version = "3.0.0-rc5", optional = true, default-features = false, features = ["rustls"] }

[dependencies.lcowsay]
version = "0.5.10"
path = "../lcowsay"
optional = true

[dependencies.lcat]
version = "0.7.14"
path = "../lcat"
optional = true
